<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".FragmentSearchAddress">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".SellerSearchAddress">

        <TextView
            android:id="@+id/category_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" /> <!-- 0 : 구매자 모드
                                                        1 : 판매자 모드 -->
        <TextView
            android:id="@+id/id_search"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/searchAddress"
            android:layout_width="247dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/search_address"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="196dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:focusable="auto"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/zip"
            app:layout_constraintEnd_toStartOf="@+id/btnSearch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAddress" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="106dp"
            android:layout_height="40dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="24dp"
            android:onClick="searchAddress"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAddress" />

        <EditText
            android:id="@+id/address"
            android:layout_width="308dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:hint="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAddress" />

        <EditText
            android:id="@+id/detailAddress"
            android:layout_width="308dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:hint="@string/address_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

    </android.support.constraint.ConstraintLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="com.example.abcd.googlemap.MapsActivity" />

</LinearLayout>